# campfire-backend

./: .env.example  .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
api/src/handlers/: attendees.rs  headcount.rs  mod.rs  radios.rs  root.rs  uploads.rs  vehicles.rs
entity/: Cargo.toml
entity/src/: attendee.rs  headcount.rs  headcount_entry.rs  lib.rs  prelude.rs  radio.rs  radio_type.rs  vehicle.rs  vehicle_inspection.rs  vehicle_type.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260108_142456_create_table.rs  m20260120_050615_create_headcount_table.rs  m20260125_124704_create_radio_table.rs  m20260127_184142_create_vehicle_table.rs
src/: main.rs
