[package]
authors = ["Braedon Smith <braedon.smith@kswg.cap.gov>"]
edition = "2024"
name = "campfire-api"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["multipart"] }
calamine = "0.32.0"
chrono = "0.4.43"
dotenvy = "0.15.7"
entity = { path = "../entity" }
migration = { path = "../migration" }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing-subscriber = "0.3.22"
